Correction bug on mobile view navbar width

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3010,7 +3010,8 @@ abbr.required {
   transition: height 0.3s ease-in-out;
   /* Dropdowns (large screen) */ }
   .nav__holder {
-    background-color: #000; }
+    background-color: #000;
+    width:100%;}
   @media only screen and (min-width: 992px) {
     .nav {
       height: 80px; }
